# cfb_fantasy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cfb_fantasy_program/: Cargo.toml
cfb_fantasy_program/src/: app.rs  main.rs
cfbd/: Cargo.toml
cfbd/src/: lib.rs  response_types.rs  utils.rs
cfbd/tests/: utils.rs
src/: app.rs  cfb.rs  main.rs
