[package]
name = "cfbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.107"
dotenv = "0.15.0"
